--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
   ],
   "rules": {
     "semi": ["error", "never"],
-    "no-console": 0
+    "no-console": 0,
+    "func-names": 0,
+    "prefer-arrow-callback": 0
   }
 }
